Update OVAR MW_MTANI{Prod by Djspark}.html

--- a/OVAR MW_MTANI{Prod by Djspark}.html
+++ b/OVAR MW_MTANI{Prod by Djspark}.html
@@ -104,7 +104,7 @@
    <img src="img/spark pic.jpg" alt="" height="250px" width="300px">             
   </center>
  <center>
-  <audio controls  loop>
+  <audio controls>
       <source src="music/OVAR MW_MTANI{Prod by Djspark}.mp3">
       
       
